--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is [Aur Tum Aaye]</p>
+		<a href="https://www.youtube.com/watch?v=s3n1Op4ipGM&list=RDs3n1Op4ipGM&start_radio=1&ab_channel=ShemarooFilmiGaane">
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
